# snkmt

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
demo/: run.sh
src/snkmt/: __init__.py  cli.py
src/snkmt/cli/: __init__.py
src/snkmt/console/: app.py  snkmt.tcss  table.py  widgets.py
src/snkmt/console/screens/: __init__.py
src/snkmt/console/views/: overview.py
src/snkmt/console/widgets/: __init__.py
src/snkmt/core/db/: session.py  snkmt.db  version.py
src/snkmt/core/db/alembic/: env.py
src/snkmt/core/db/alembic/versions/: addc0edea736_remove_snkmt_db_version.py  c59016d243cc_.py
src/snkmt/core/models/: version.py
src/snkmt/core/repository/: __init__.py  sql.py
src/snkmt/db/: session.py
src/snkmt/db/alembic/: env.py
src/snkmt/db/alembic/versions/: a088a7b93fe5_initial_schema.py
src/snkmt/db/models/: __init__.py  rule.py  version.py  workflow.py
src/snkmt/persistence/: dto.py  repository.py  sql.py
tests/: test_db.py
tests/fixtures/: legacy.db
