[project]
name = "snkmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cade Mirchandani", email = "cmirchan@ucsc.edu" }]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.1.1",
    "typer>=0.15.3",
]

[project.scripts]
snkmt = "snkmt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.pypi-dependencies]
snkmt = { path = ".", editable = true }
snakemake-logger-plugin-snkmt = { path = "../snakemake_logger_plugin_snkmt", editable = true }

[tool.pixi.feature.dev.tasks]
demo = { cmd = "snakemake --cores 1 --logger snkmt -n", cwd="demo"}
[tool.pixi.feature.dev.dependencies]
snakemake = ">=9.3.3,<10"


