[project]
name = "snkmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cade Mirchandani", email = "cmirchan@ucsc.edu" }]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.1.1",
    "typer>=0.15.3",
    "sqlalchemy>=2.0.38",
]

[project.scripts]
snkmt = "snkmt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.pypi-dependencies]
snkmt = { path = ".", editable = true }
textual-dev = ">=1.7.0"


[tool.pixi.feature.dev.pypi-dependencies]
# snakemake-logger-plugin-sqlite = { path = "../snakemake-logger-plugin-sqlite", editable = true }

[tool.pixi.feature.dev.tasks]
demo = {cmd = "snakemake -d results -s workflows/simple-success.smk --logger sqlite --cores 1", cwd="demo"}
cleanup-demo ={cmd = "rm -r results", cwd="demo"}


[tool.pixi.feature.dev.dependencies]
snakemake = ">=9.3.3,<10"



