[project]
name = "snkmt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Cade Mirchandani", email = "cmirchan@ucsc.edu" }]
requires-python = ">=3.12"
dependencies = [
    "textual>=3.1.1",
    "typer>=0.15.3",
    "sqlalchemy>=2.0.38", "alembic>=1.16.1,<2", "platformdirs>=4.3.8,<5", "loguru>=0.7.3,<0.8",
]

[project.scripts]
snkmt = "snkmt:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pixi.workspace]
channels = ["conda-forge", "bioconda"]
platforms = ["osx-arm64"]

[tool.pixi.environments]
dev = { features = ["dev"] }

[tool.pixi.pypi-dependencies]
snkmt = { path = ".", editable = true }
textual-dev = ">=1.7.0"


[tool.pixi.feature.dev.pypi-dependencies]
snkmt = { path = ".", editable = true }
snakemake-logger-plugin-snkmt = { git = "https://github.com/cademirch/snakemake-logger-plugin-snkmt.git", editable = true }


[tool.pixi.feature.dev.tasks]
demo = {cmd = "./run.sh", cwd="demo"}
cleanup-demo ={cmd = "rm -r results", cwd="demo"}
console = {cmd = "textual run --dev -c snkmt console"}
dev-console = {cmd = "textual console -x SYSTEM -x EVENT"}


[tool.pixi.feature.dev.dependencies]
snakemake = ">=9.3.3,<10"






